--- a/assets/filter.css
+++ b/assets/filter.css
@@ -572,7 +572,7 @@ body[data-ccc_useragent="desktop"] #ccc-terms_filter_ajax-article[data-ccc_posts
   #ccc-terms_filter_ajax-article[data-ccc_posts_filter-style="1"] #ccc-terms_filter_ajax-inner .list-ccc_terms_filter_ajax {
     width: calc(50% - 3%);
     margin: 0 3% 3% 0;
-    font-size: 14px;
+    font-size: 0.9em;
   }
   #ccc-terms_filter_ajax-article[data-ccc_posts_filter-style="1"] #ccc-terms_filter_ajax-inner .ccc-favorite-post-toggle {
     margin-top: -20px;
